--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,18 +1,13 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: Ruby
 
 on: push
 
 jobs:
-  test_32:
+  test:
     runs-on: ubuntu-latest
-    container: ruby:3.2
+    strategy:
+      matrix:
+        ruby_version: [3.2, 3.1, 3.0, 2.7]
 
     services:
       redis:
@@ -20,70 +15,12 @@ jobs:
       toxiproxy:
         image: ghcr.io/shopify/toxiproxy:2.5.0
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: gem install bundler && bundle install
-    - name: Run tests
-      run: bin/rake test
-      env:
-        REDIS_URL: redis://toxiproxy:22220
-        TOXIPROXY_HOST: http://toxiproxy:8474
-
-  test_31:
-    runs-on: ubuntu-latest
-    container: ruby:3.1
-
-    services:
-      redis:
-        image: redis
-      toxiproxy:
-        image: ghcr.io/shopify/toxiproxy:2.5.0
+    container: ruby:${{ matrix.ruby_version }}
 
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: gem install bundler && bundle install
-    - name: Run tests
-      run: bin/rake test
-      env:
-        REDIS_URL: redis://toxiproxy:22220
-        TOXIPROXY_HOST: http://toxiproxy:8474
-
-  test_30:
-    runs-on: ubuntu-latest
-    container: ruby:3.0
-
-    services:
-      redis:
-        image: redis
-      toxiproxy:
-        image: ghcr.io/shopify/toxiproxy:2.5.0
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: gem install bundler && bundle install
-    - name: Run tests
-      run: bin/rake test
-      env:
-        REDIS_URL: redis://toxiproxy:22220
-        TOXIPROXY_HOST: http://toxiproxy:8474
-
-  test_27:
-    runs-on: ubuntu-latest
-    container: ruby:2.7
-
-    services:
-      redis:
-        image: redis
-      toxiproxy:
-        image: ghcr.io/shopify/toxiproxy:2.5.0
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: gem install bundler && bundle install
+      run: gem install bundler -v 2.4.22 && bundle install
     - name: Run tests
       run: bin/rake test
       env:
@@ -92,20 +29,22 @@ jobs:
 
   typecheck:
     runs-on: ubuntu-latest
-    container: ruby:2.7
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: gem install bundler && bundle install
+    - uses: actions/checkout@v4
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true # 'bundle install' and cache gems
     - name: Typecheck Ruby code
       run: bin/srb tc
 
   lint:
     runs-on: ubuntu-latest
-    container: ruby:3.2
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: gem install bundler && bundle install
+    - uses: actions/checkout@v4
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true # 'bundle install' and cache gems
     - name: Lint Ruby code
       run: bin/rubocop
